--- a/index.html
+++ b/index.html
@@ -17,34 +17,23 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-            <a class="navbar-brand text-white" href="#">My Ship</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
+        <nav class="navbar navbar-expand-lg navbar-light bg-dark">                  
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="#">Link</a>
-                </li>
+              <ul class="navbar-nav mr-auto">                
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
+                    My Ship
                   </a>
                   <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item text-white" href="#">Action</a>
-                    <a class="dropdown-item text-white" href="#">Another action</a>
+                    <a class="dropdown-item text-white" href="#">Bridge</a>
+                    <a class="dropdown-item text-white" href="#">Captain Quarter</a>
+                    <a class="dropdown-item text-white" href="#">Crew Quarter</a>
+                    <a class="dropdown-item text-white" href="#">Cargo</a>
+                    <a class="dropdown-item text-white" href="#">Engine Room</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-white" href="#">Something else here</a>
+                    <a class="dropdown-item text-white" href="#">Resume</a>
                   </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled text-white" href="#">Disabled</a>
-                </li>
+                </li>                
               </ul>
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
